biblio-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: biblioteca-deployment
  labels:
    app: biblioteca
    type: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: biblioteca
      type: frontend
  template:
    metadata:
      labels:
        app: biblioteca
        type: frontend
    spec:
      containers:
        - name: contenedor-biblioteca
          image: fmp24/biblioteca:v1
          ports:
            - containerPort: 80
              name: http-port
