ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: biblioteca-ingress
  labels:
    app: biblioteca
    type: frontend
spec:
  rules:
  - host: www.franbiblio.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: biblioteca-service
            port:
              name: http-sv-port
